chore: refactor & organize secrets

--- a/kubernetes/apps/games/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/games/romm/app/externalsecret.yaml
@@ -12,21 +12,21 @@ spec:
     name: *name
     template:
       data:
-        # RomM
+        ## RomM
         DB_HOST: &dbHost postgres17-rw.database.svc.cluster.local
         DB_PORT: "5432"
         DB_NAME: &dbName romm
         DB_USER: &dbUser "{{ .ROMM_POSTGRES_USER }}"
         DB_PASSWD: &dbPass "{{ .ROMM_POSTGRES_PASSWORD }}"
+        ROMM_AUTH_SECRET_KEY: "{{ .ROMM_AUTH_SECRET_KEY }}"
         IGDB_CLIENT_ID: "{{ .IGDB_CLIENT_ID }}"
         IGDB_CLIENT_SECRET: "{{ .IGDB_CLIENT_SECRET }}"
         SCREENSCRAPER_USER: "{{ .SCREENSCRAPER_USER }}"
         SCREENSCRAPER_PASSWORD: "{{ .SCREENSCRAPER_PASSWORD }}"
         STEAMGRIDDB_API_KEY: "{{ .STEAMGRIDDB_API_KEY }}"
-        ROMM_AUTH_SECRET_KEY: "{{ .ROMM_AUTH_SECRET_KEY }}"
-        # Redis
+        ## Redis
         REDIS_PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
-        # Postgres Init
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_USER: *dbUser
