--- a/kubernetes/apps/media/jellystat/app/externalsecret.yaml
+++ b/kubernetes/apps/media/jellystat/app/externalsecret.yaml
@@ -12,19 +12,21 @@ spec:
     name: *name
     template:
       data:
+        ## Jellystat
         JWT_SECRET: "{{ .JELLYSTAT_JWT_SECRET }}"
-        POSTGRES_DB: &dbName jfstat
         POSTGRES_IP: &dbHost postgres17-rw.database.svc.cluster.local
         POSTGRES_PORT: "5432"
+        POSTGRES_DB: &dbName jfstat
         POSTGRES_USER: &dbUser "{{ .JELLYSTAT_POSTGRES_USER }}"
-        POSTGRES_PASSWORD: &dbPass "{{ .JELLYSTAT_POSTGRES_PASS }}"
-        INIT_POSTGRES_DBNAME: *dbName
+        POSTGRES_PASSWORD: &dbPass "{{ .JELLYSTAT_POSTGRES_PASSWORD }}"
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
-        key: jellystat
-    - extract:
         key: cloudnative-pg
+    - extract:
+        key: jellystat
