--- a/kubernetes/apps/media/prowlarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/prowlarr/app/externalsecret.yaml
@@ -12,6 +12,7 @@ spec:
     name: *name
     template:
       data:
+        ## Prowlarr
         PROWLARR__AUTH__APIKEY: "{{ .PROWLARR_API_KEY }}"
         PROWLARR__POSTGRES__HOST: &dbHost postgres17-rw.database.svc.cluster.local
         PROWLARR__POSTGRES__PORT: "5432"
@@ -19,13 +20,14 @@ spec:
         PROWLARR__POSTGRES__PASSWORD: &dbPass "{{ .PROWLARR_POSTGRES_PASSWORD }}"
         PROWLARR__POSTGRES__MAINDB: prowlarr_main
         PROWLARR__POSTGRES__LOGDB: prowlarr_log
-        INIT_POSTGRES_DBNAME: prowlarr_main prowlarr_log
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_DBNAME: prowlarr_main prowlarr_log
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
-        key: prowlarr
-    - extract:
         key: cloudnative-pg
+    - extract:
+        key: prowlarr
