--- a/kubernetes/apps/media/radarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/radarr/app/externalsecret.yaml
@@ -12,6 +12,7 @@ spec:
     name: *name
     template:
       data:
+        ## Radarr
         RADARR__AUTH__APIKEY: "{{ .RADARR_API_KEY }}"
         RADARR__POSTGRES__HOST: &dbHost postgres17-rw.database.svc.cluster.local
         RADARR__POSTGRES__PORT: "5432"
@@ -20,16 +21,18 @@ spec:
         RADARR__POSTGRES__MAINDB: radarr_main
         RADARR__POSTGRES__LOGDB: radarr_log
         PUSHOVER_TOKEN: "{{ .RADARR_PUSHOVER_TOKEN }}"
+        ## Pushover
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
-        INIT_POSTGRES_DBNAME: radarr_main radarr_log
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_DBNAME: radarr_main radarr_log
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
-        key: radarr
+        key: cloudnative-pg
     - extract:
         key: pushover
     - extract:
-        key: cloudnative-pg
+        key: radarr
