--- a/kubernetes/apps/media/recyclarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/recyclarr/app/externalsecret.yaml
@@ -12,7 +12,9 @@ spec:
     name: *name
     template:
       data:
+        ## Radarr
         RADARR_API_KEY: "{{ .RADARR_API_KEY }}"
+        ## Sonarr
         SONARR_API_KEY: "{{ .SONARR_API_KEY }}"
   dataFrom:
     - extract:
