--- a/kubernetes/apps/media/sonarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/sonarr/app/externalsecret.yaml
@@ -12,6 +12,7 @@ spec:
     name: *name
     template:
       data:
+        ## Sonarr
         SONARR__AUTH__APIKEY: "{{ .SONARR_API_KEY }}"
         SONARR__POSTGRES__HOST: &dbHost postgres17-rw.database.svc.cluster.local
         SONARR__POSTGRES__PORT: "5432"
@@ -20,7 +21,9 @@ spec:
         SONARR__POSTGRES__MAINDB: sonarr_main
         SONARR__POSTGRES__LOGDB: sonarr_log
         PUSHOVER_TOKEN: "{{ .SONARR_PUSHOVER_TOKEN }}"
+        ## Pushover
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
+        ## Postgres Init
         INIT_POSTGRES_DBNAME: sonarr_main sonarr_log
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_USER: *dbUser
@@ -28,8 +31,8 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
-        key: sonarr
+        key: cloudnative-pg
     - extract:
         key: pushover
     - extract:
-        key: cloudnative-pg
+        key: sonarr
