--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -12,18 +12,18 @@ spec:
     name: *name
     template:
       data:
-        # Grafana
+        ## Grafana
+        GF_DATABASE_TYPE: postgres
         GF_DATABASE_HOST: &dbHost postgres17-rw.database.svc.cluster.local
         GF_DATABASE_NAME: &dbName grafana
         GF_DATABASE_USER: &dbUser "{{ .GRAFANA_POSTGRES_USER }}"
         GF_DATABASE_PASSWORD: &dbPass "{{ .GRAFANA_POSTGRES_PASSWORD }}"
         GF_DATABASE_SSL_MODE: disable
-        GF_DATABASE_TYPE: postgres
         GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ .GRAFANA_OAUTH_CLIENT_ID }}"
         GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
         adminUser: "{{ .GRAFANA_ADMIN_USER }}"
         adminPass: "{{ .GRAFANA_ADMIN_PASSWORD }}"
-        # Postgres Init
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_USER: *dbUser
@@ -31,6 +31,6 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
-        key: grafana
-    - extract:
         key: cloudnative-pg
+    - extract:
+        key: grafana
