--- a/kubernetes/apps/observability/kube-prometheus-stack/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/externalsecret.yaml
@@ -13,7 +13,9 @@ spec:
     name: *name
     template:
       data:
+        ## Alertmanager
         ALERTMANAGER_PUSHOVER_TOKEN: "{{ .ALERTMANAGER_PUSHOVER_TOKEN }}"
+        ## Pushover
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
   dataFrom:
     - extract:
