--- a/kubernetes/apps/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authentik/app/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     name: *app
     template:
       data:
-        # Authentik
+        ## Authentik
         AUTHENTIK_POSTGRESQL__HOST: &dbHost postgres17-rw.database.svc.cluster.local
         AUTHENTIK_POSTGRESQL__NAME: &dbName authentik
         AUTHENTIK_POSTGRESQL__USER: &dbUser "{{ .AUTHENTIK_POSTGRES_USER }}"
@@ -22,15 +22,15 @@ spec:
         AUTHENTIK_EMAIL__PASSWORD: "{{ .AUTHENTIK_SMTP_PASSWORD }}"
         AUTHENTIK_EMAIL__USE_SSL: "true"
         AUTHENTIK_EMAIL__FROM: "Authentik <auth@${SECRET_DOMAIN}>"
-        # Redis
+        ## Redis
         AUTHENTIK_REDIS__HOST: dragonfly.database.svc.cluster.local
         AUTHENTIK_REDIS__PORT: "6379"
         AUTHENTIK_REDIS__DB: "2"
         AUTHENTIK_REDIS__PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
-        # SMTP
+        ## SMTP
         AUTHENTIK_EMAIL__HOST: "{{ .SMTP_HOST }}"
         AUTHENTIK_EMAIL__PORT: "{{ .SMTP_PORT }}"
-        # Postgres Init
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_USER: *dbUser
