--- a/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
@@ -12,10 +12,12 @@ spec:
     name: *name
     template:
       data:
-        DB_DATABASE_NAME: immich
+        ## Immich
         DB_HOSTNAME: pgvectors-rw.database.svc.cluster.local
+        DB_DATABASE_NAME: immich
         DB_USERNAME: "{{ .IMMICH_POSTGRES_USER }}"
-        DB_PASSWORD: "{{ .IMMICH_POSTGRES_PASS }}"
+        DB_PASSWORD: "{{ .IMMICH_POSTGRES_PASSWORD }}"
+        ## Redis
         REDIS_PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
   dataFrom:
     - extract:
