--- a/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
@@ -12,10 +12,7 @@ spec:
     name: *app
     template:
       data:
-        # Collabora
-        COLLABORA_USERNAME: "{{ .COLLABORA_USERNAME }}"
-        COLLABORA_PASSWORD: "{{ .COLLABORA_PASSWORD }}"
-        # Nextcloud
+        ## Nextcloud
         NEXTCLOUD_ADMIN_USER: "{{ .NEXTCLOUD_ADMIN_USER }}"
         NEXTCLOUD_ADMIN_PASSWORD: "{{ .NEXTCLOUD_ADMIN_PASSWORD }}"
         NEXTCLOUD_METRICS_TOKEN: "{{ .NEXTCLOUD_METRICS_TOKEN }}"
@@ -26,13 +23,16 @@ spec:
         SMTP_USERNAME: "{{ .NEXTCLOUD_SMTP_USERNAME }}"
         SMTP_PASSWORD: "{{ .NEXTCLOUD_SMTP_PASSWORD }}"
         WHITEBOARD_JWT_SECRET_KEY: "{{ .NEXTCLOUD_WHITEBOARD_JWT_SECRET_KEY }}"
-        # Redis
+        ## Redis
         REDIS_HOST_PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
-        # SMTP
+        ## SMTP
         SMTP_HOST: "{{ .SMTP_HOST }}"
-        # Postgres Init
-        INIT_POSTGRES_DBNAME: *dbName
+        ## Collabora
+        COLLABORA_USERNAME: "{{ .COLLABORA_USERNAME }}"
+        COLLABORA_PASSWORD: "{{ .COLLABORA_PASSWORD }}"
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
