--- a/kubernetes/apps/self-hosted/searxng/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/searxng/app/externalsecret.yaml
@@ -12,8 +12,11 @@ spec:
     name: *name
     template:
       data:
+        ## SearXNG
         SEARXNG_SECRET: "{{ .SEARXNG_SECRET }}"
+        ## Redis
         SEARXNG_REDIS_URL: redis://:{{ .DRAGONFLY_PASSWORD }}@dragonfly.database.svc.cluster.local:6379/4
+        ## OVPN
         WIREGUARD_ENDPOINT_IP: "{{ .SEARXNG_WIREGUARD_ENDPOINT_IP }}"
         WIREGUARD_ENDPOINT_PORT: "{{ .SEARXNG_WIREGUARD_ENDPOINT_PORT }}"
         WIREGUARD_PUBLIC_KEY: "{{ .SEARXNG_WIREGUARD_PUBLIC_KEY }}"
