--- a/kubernetes/apps/ai/open-webui/app/externalsecret.yaml
+++ b/kubernetes/apps/ai/open-webui/app/externalsecret.yaml
@@ -12,19 +12,21 @@ spec:
     name: *name
     template:
       data:
-        INIT_POSTGRES_DBNAME: openwebui
-        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
-        INIT_POSTGRES_USER: "{{ .OPENWEBUI_POSTGRES_USER }}"
-        INIT_POSTGRES_PASS: "{{ .OPENWEBUI_POSTGRES_PASS }}"
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        ## Open WebUI
+        DATABASE_URL: postgres://{{ .OPENWEBUI_POSTGRES_USER }}:{{ .OPENWEBUI_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/openwebui
         # Randomly generated on first start but will fail when writing to the file
         # because of read-only root file system. Secret must therefor be set using
         # environment variable. Overrides the randomly generated string used for
         # JSON Web Token.
         WEBUI_SECRET_KEY: "{{ .OPENWEBUI_WEBUI_SECRET_KEY }}"
-        DATABASE_URL: postgres://{{ .OPENWEBUI_POSTGRES_USER }}:{{ .OPENWEBUI_POSTGRES_PASS }}@postgres16-rw.database.svc.cluster.local:5432/openwebui
+        ## Postgres Init
+        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
+        INIT_POSTGRES_DBNAME: openwebui
+        INIT_POSTGRES_USER: "{{ .OPENWEBUI_POSTGRES_USER }}"
+        INIT_POSTGRES_PASS: "{{ .OPENWEBUI_POSTGRES_PASSWORD }}"
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
-        key: open-webui
-    - extract:
         key: cloudnative-pg
+    - extract:
+        key: open-webui
