--- a/kubernetes/apps/media/bazarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/bazarr/app/externalsecret.yaml
@@ -12,15 +12,17 @@ spec:
     name: *name
     template:
       data:
+        ## Bazarr
         BAZARR__API_KEY: "{{ .BAZARR_API_KEY }}"
         POSTGRES_ENABLED: "true"
-        POSTGRES_DATABASE: &dbName bazarr
         POSTGRES_HOST: &dbHost postgres17-rw.database.svc.cluster.local
         POSTGRES_PORT: "5432"
+        POSTGRES_DATABASE: &dbName bazarr
         POSTGRES_USERNAME: &dbUser "{{ .BAZARR_POSTGRES_USER }}"
         POSTGRES_PASSWORD: &dbPass "{{ .BAZARR_POSTGRES_PASSWORD }}"
-        INIT_POSTGRES_DBNAME: *dbName
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
