--- a/kubernetes/apps/media/lidarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/lidarr/app/externalsecret.yaml
@@ -12,6 +12,7 @@ spec:
     name: *name
     template:
       data:
+        ## Lidarr
         LIDARR__AUTH__APIKEY: "{{ .LIDARR_API_KEY }}"
         LIDARR__POSTGRES__HOST: &dbHost postgres17-rw.database.svc.cluster.local
         LIDARR__POSTGRES__PORT: "5432"
@@ -20,16 +21,18 @@ spec:
         LIDARR__POSTGRES__MAINDB: lidarr_main
         LIDARR__POSTGRES__LOGDB: lidarr_log
         PUSHOVER_TOKEN: "{{ .LIDARR_PUSHOVER_TOKEN }}"
+        ## Pushover
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
-        INIT_POSTGRES_DBNAME: lidarr_main lidarr_log
+        ## Postgres Init
         INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_DBNAME: lidarr_main lidarr_log
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
+        key: cloudnative-pg
+    - extract:
         key: lidarr
     - extract:
         key: pushover
-    - extract:
-        key: cloudnative-pg
