--- a/kubernetes/apps/media/unpackerr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/unpackerr/app/externalsecret.yaml
@@ -12,7 +12,9 @@ spec:
     name: *name
     template:
       data:
+        ## Radarr
         UN_RADARR_0_API_KEY: "{{ .RADARR_API_KEY }}"
+        ## Sonarr
         UN_SONARR_0_API_KEY: "{{ .SONARR_API_KEY }}"
   dataFrom:
     - extract:
