--- a/kubernetes/apps/observability/gatus/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/gatus/app/externalsecret.yaml
@@ -12,10 +12,11 @@ spec:
     name: *name
     template:
       data:
-        INIT_POSTGRES_DBNAME: gatus
+        ## Postgres Init
         INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
+        INIT_POSTGRES_DBNAME: gatus
         INIT_POSTGRES_USER: "{{ .GATUS_POSTGRES_USER }}"
-        INIT_POSTGRES_PASS: "{{ .GATUS_POSTGRES_PASS }}"
+        INIT_POSTGRES_PASS: "{{ .GATUS_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
