--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -16,7 +16,7 @@ endpoints:
 metrics: true
 storage:
   type: postgres
-  path: postgres://$${INIT_POSTGRES_USER}:$${INIT_POSTGRES_PASS}@$${INIT_POSTGRES_HOST}:5432/$${INIT_POSTGRES_DBNAME}?sslmode=disable
+  path: postgres://$${INIT_POSTGRES_USER}:$${INIT_POSTGRES_PASSWORD}@$${INIT_POSTGRES_HOST}:5432/$${INIT_POSTGRES_DBNAME}?sslmode=disable
   caching: true
 ui:
   title: Status | Gatus
