--- a/kubernetes/apps/self-hosted/karakeep/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/karakeep/app/externalsecret.yaml
@@ -12,8 +12,10 @@ spec:
     name: *name
     template:
       data:
-        NEXTAUTH_SECRET: "{{ .NEXTAUTH_SECRET }}"
+        ## Karakeep
         MEILI_MASTER_KEY: "{{ .MEILI_MASTER_KEY }}"
+        NEXTAUTH_SECRET: "{{ .NEXTAUTH_SECRET }}"
+        ## OpenAI
         OPENAI_API_KEY: "{{ .OPENAI_API_KEY_KARAKEEP }}"
   dataFrom:
     - extract:
