--- a/kubernetes/apps/utilities/atuin/app/externalsecret.yaml
+++ b/kubernetes/apps/utilities/atuin/app/externalsecret.yaml
@@ -13,12 +13,14 @@ spec:
     creationPolicy: Owner
     template:
       data:
+        ## Atuin
         ATUIN_DB_URI: |-
-          postgres://{{ .ATUIN_POSTGRES_USER }}:{{ .ATUIN_POSTGRES_PASS }}@postgres17-rw.database.svc.cluster.local/atuin
-        INIT_POSTGRES_DBNAME: atuin
+          postgres://{{ .ATUIN_POSTGRES_USER }}:{{ .ATUIN_POSTGRES_PASSWORD }}@postgres17-rw.database.svc.cluster.local/atuin
+        ## Postgres Init
         INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
+        INIT_POSTGRES_DBNAME: atuin
         INIT_POSTGRES_USER: "{{ .ATUIN_POSTGRES_USER }}"
-        INIT_POSTGRES_PASS: "{{ .ATUIN_POSTGRES_PASS }}"
+        INIT_POSTGRES_PASS: "{{ .ATUIN_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
