--- a/kubernetes/components/volsync/minio/externalsecret.yaml
+++ b/kubernetes/components/volsync/minio/externalsecret.yaml
@@ -12,12 +12,14 @@ spec:
     name: *name
     template:
       data:
-        RESTIC_REPOSITORY: "s3:https://s3.${SECRET_DOMAIN}/volsync/${APP}"
-        RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
+        ## MinIO
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        ## Volsync
+        RESTIC_REPOSITORY: "s3:https://s3.${SECRET_DOMAIN}/volsync/${APP}"
+        RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
   dataFrom:
     - extract:
-        key: volsync
-    - extract:
         key: minio
+    - extract:
+        key: volsync
