fix(silence-operator): replace with home-operations chart

--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -15,5 +15,5 @@ resources:
   - ./kube-prometheus-stack/ks.yaml
   - ./loki/ks.yaml
   - ./promtail/ks.yaml
-  - ./silence-operator/ks.yaml
+  # - ./silence-operator/ks.yaml
   - ./unpoller/ks.yaml
