--- a/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
@@ -50,6 +50,15 @@ spec:
         runAsNonRoot: true
         runAsUser: &uid 65534
         runAsGroup: *uid
+    rbac:
+      bindings:
+        system-upgrade-controller:
+          type: ClusterRoleBinding
+          roleRef:
+            kind: ClusterRole
+            name: cluster-admin
+          subjects:
+            - identifier: system-upgrade-controller
     serviceAccount:
       system-upgrade-controller:
         enabled: true
