--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -16,7 +16,9 @@
       automerge: true,
       automergeType: "pr",
       matchUpdateTypes: ["minor", "patch"],
-      matchPackageNames: ["/kube-prometheus-stack/", "/grafana/"],
+      // TODO: Re-enable on next Loki v3.5.1 release.
+      // matchPackageNames: ["/kube-prometheus-stack/", "/grafana/"],
+      matchPackageNames: ["/kube-prometheus-stack/"],
       ignoreTests: false,
     },
     {
