--- a/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
@@ -50,6 +50,13 @@ spec:
         runAsNonRoot: true
         runAsUser: &uid 65534
         runAsGroup: *uid
+    rawResources:
+      talosServiceAccount:
+        apiVersion: talos.dev/v1alpha1
+        kind: ServiceAccount
+        spec:
+          spec:
+            roles: ["os:admin"]
     rbac:
       bindings:
         system-upgrade-controller:
