Revert "chore(dokuwiki): move repo to ghcr and taged releases"
This reverts commit 7212a754db3f43021d016335b5bf7d8ac6aa5923.

--- a/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
@@ -24,8 +24,8 @@ spec:
         containers:
           dokuwiki:
             image:
-              repository: ghcr.io/dokuwiki/dokuwiki
-              tag: 2025-05-14@sha256:d93e229c771467ab5b27b8870a10bc733aa471285444f958962e88537e54d752
+              repository: docker.io/dokuwiki/dokuwiki
+              tag: stable
             env:
               PHP_TIMEZONE: ${CONFIG_TIMEZONE}
             probes:
