chore(cnpg): create immich migrate cluster

--- a/kubernetes/apps/database/cloudnative-pg/cluster/immich/immich-pg16-migrate.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/immich/immich-pg16-migrate.yaml
@@ -47,5 +47,5 @@ spec:
         dbname: postgres
         sslmode: require
       password:
-        key: cloudnative-pg
+        key: immich-pg16-migrate
         name: password
