--- a/kubernetes/apps/database/cloudnative-pg/cluster/pgvectors/pgvectors.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/pgvectors/pgvectors.yaml
@@ -6,7 +6,7 @@ metadata:
   name: pgvectors
 spec:
   instances: 3
-  imageName: ghcr.io/tensorchord/cloudnative-pgvecto.rs:16.3-v0.2.1
+  imageName: ghcr.io/tensorchord/cloudnative-vectorchord:16.9-0.3.0
   primaryUpdateStrategy: unsupervised
   storage:
     size: 10Gi
@@ -16,7 +16,7 @@ spec:
   enableSuperuserAccess: true
   postgresql:
     shared_preload_libraries:
-      - "vectors.so"
+      - "vchord.so"
     parameters:
       max_connections: "600"
       shared_buffers: 512MB
