chore(cnpg): add vchord to immich cluster

--- a/kubernetes/apps/database/cloudnative-pg/cluster/pgvectors/pgvectors.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/pgvectors/pgvectors.yaml
@@ -17,6 +17,7 @@ spec:
   postgresql:
     shared_preload_libraries:
       - "vectors.so"
+      - "vchord.so"
     parameters:
       max_connections: "600"
       shared_buffers: 512MB
