--- a/kubernetes/apps/database/cloudnative-pg/cluster/immich-pg17/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/immich-pg17/kustomization.yaml
@@ -3,6 +3,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./immich-pg17
-  - ./pgvectors
-  - ./postgres17
+  - ./immich-pg17.yaml
