chore(cnpg): create new immich pg17 cluster

--- a/kubernetes/apps/database/cloudnative-pg/cluster/immich-pg17/immich-pg17.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/immich-pg17/immich-pg17.yaml
@@ -20,7 +20,7 @@ spec:
       serverName: immich-pg17-v1
       s3Credentials:
         accessKeyId:
-          name: &secret ccloudnative-pg
+          name: &secret cloudnative-pg
           key: s3-access-key
         secretAccessKey:
           name: *secret
