--- a/kubernetes/apps/database/cloudnative-pg/cluster/immich-pg17/immich-pg17.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/immich-pg17/immich-pg17.yaml
@@ -27,6 +27,8 @@ spec:
           key: s3-secret-key
   bootstrap:
     initdb:
+      postInitSQL:
+        - CREATE EXTENSION IF NOT EXISTS vchord CASCADE;
       import:
         databases: ["*"]
         roles: ["*"]
