chore(immich): move to immich pg17 cluster

--- a/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         ## Immich
-        DB_HOSTNAME: pgvectors-rw.database.svc.cluster.local
+        DB_HOSTNAME: immich-pg17-rw.database.svc.cluster.local
         DB_DATABASE_NAME: immich
         DB_USERNAME: "{{ .IMMICH_POSTGRES_USER }}"
         DB_PASSWORD: "{{ .IMMICH_POSTGRES_PASSWORD }}"
