--- a/kubernetes/apps/database/cloudnative-pg/cluster/immich-pg17/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/immich-pg17/kustomization.yaml
@@ -3,4 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./gatus.yaml
   - ./immich-pg17.yaml
+  - ./scheduledbackup.yaml
