--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster-pg17/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster-pg17/kustomization.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cluster-pg17
-  - ./immich-pg17
-  - ./pgvectors
-  - ./postgres17
+  # - ./gatus.yaml
+  - ./postgres17.yaml
+  # - ./scheduledbackup.yaml
+  # - ./service.yaml
