chore: move to new pg17 cluster

--- a/kubernetes/apps/ai/open-webui/app/externalsecret.yaml
+++ b/kubernetes/apps/ai/open-webui/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
         # JSON Web Token.
         WEBUI_SECRET_KEY: "{{ .OPENWEBUI_WEBUI_SECRET_KEY }}"
         ## Postgres Init
-        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: cluster-pg17-rw.database.svc.cluster.local
         INIT_POSTGRES_DBNAME: openwebui
         INIT_POSTGRES_USER: "{{ .OPENWEBUI_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .OPENWEBUI_POSTGRES_PASSWORD }}"
