--- a/kubernetes/apps/games/romm/app/externalsecret.yaml
+++ b/kubernetes/apps/games/romm/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         ## RomM
-        DB_HOST: &dbHost postgres17-rw.database.svc.cluster.local
+        DB_HOST: &dbHost cluster-pg17-rw.database.svc.cluster.local
         DB_PORT: "5432"
         DB_NAME: &dbName romm
         DB_USER: &dbUser "{{ .ROMM_POSTGRES_USER }}"
