--- a/kubernetes/apps/media/bazarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/bazarr/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
         ## Bazarr
         BAZARR__API_KEY: "{{ .BAZARR_API_KEY }}"
         POSTGRES_ENABLED: "true"
-        POSTGRES_HOST: &dbHost postgres17-rw.database.svc.cluster.local
+        POSTGRES_HOST: &dbHost cluster-pg17-rw.database.svc.cluster.local
         POSTGRES_PORT: "5432"
         POSTGRES_DATABASE: &dbName bazarr
         POSTGRES_USERNAME: &dbUser "{{ .BAZARR_POSTGRES_USER }}"
