--- a/kubernetes/apps/observability/gatus/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/gatus/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         ## Postgres Init
-        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
+        INIT_POSTGRES_HOST: cluster-pg17-rw.database.svc.cluster.local
         INIT_POSTGRES_DBNAME: gatus
         INIT_POSTGRES_USER: "{{ .GATUS_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .GATUS_POSTGRES_PASSWORD }}"
