--- a/kubernetes/apps/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authentik/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         ## Authentik
-        AUTHENTIK_POSTGRESQL__HOST: &dbHost postgres17-rw.database.svc.cluster.local
+        AUTHENTIK_POSTGRESQL__HOST: &dbHost cluster-pg17-rw.database.svc.cluster.local
         AUTHENTIK_POSTGRESQL__NAME: &dbName authentik
         AUTHENTIK_POSTGRESQL__USER: &dbUser "{{ .AUTHENTIK_POSTGRES_USER }}"
         AUTHENTIK_POSTGRESQL__PASSWORD: &dbPass "{{ .AUTHENTIK_POSTGRES_PASSWORD }}"
