--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster-pg17/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster-pg17/kustomization.yaml
@@ -4,6 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./cluster-pg17.yaml
-  # - ./gatus.yaml
-  # - ./scheduledbackup.yaml
-  # - ./service.yaml
+  - ./gatus.yaml
+  - ./scheduledbackup.yaml
+  - ./service.yaml
