--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster-pg17/cluster-pg17.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster-pg17/cluster-pg17.yaml
@@ -25,18 +25,18 @@ spec:
         secretAccessKey:
           name: *secret
           key: s3-secret-key
-  bootstrap:
-    initdb:
-      import:
-        databases: ["*"]
-        roles: ["*"]
-        source:
-          externalCluster: &previousCluster postgres17
-        type: monolith
-    # Note: previousCluster needs to be set to the name of the previous cluster
-    # when recovering from an existing CloudNativePG cluster.
-    # recovery:
-    #   source: &previousCluster cluster-pg17-v1
+  # bootstrap:
+  #   initdb:
+  #     import:
+  #       databases: ["*"]
+  #       roles: ["*"]
+  #       source:
+  #         externalCluster: &previousCluster postgres17
+  #       type: monolith
+  #   # Note: previousCluster needs to be set to the name of the previous cluster
+  #   # when recovering from an existing CloudNativePG cluster.
+  #   recovery:
+  #     source: &previousCluster cluster-pg17-v1
   enableSuperuserAccess: true
   instances: 3
   imageName: ghcr.io/cloudnative-pg/postgresql:${POSTGRESQL_VERSION}
@@ -62,17 +62,17 @@ spec:
     name: cloudnative-pg
   # Note: externalClusters is needed when recovering from an existing
   # CloudNativePG cluster.
-  externalClusters:
-    # - name: *previousCluster
-    #   barmanObjectStore:
-    #     <<: *barmanObjectStore
-    #     serverName: *previousCluster
-    - name: *previousCluster
-      connectionParameters:
-        host: postgres17-rw.database.svc.cluster.local
-        user: postgres
-        dbname: postgres
-        sslmode: require
-      password:
-        name: *secret
-        key: password
+  # externalClusters:
+  #   - name: *previousCluster
+  #     barmanObjectStore:
+  #       <<: *barmanObjectStore
+  #       serverName: *previousCluster
+  #   - name: *previousCluster
+  #     connectionParameters:
+  #       host: postgres17-rw.database.svc.cluster.local
+  #       user: postgres
+  #       dbname: postgres
+  #       sslmode: require
+  #     password:
+  #       name: *secret
+  #       key: password
