--- a/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
+++ b/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
@@ -18,7 +18,7 @@ spec:
       retries: 3
   values:
     controllers:
-      postgres17:
+      cluster-pg17:
         annotations: &annotations
           reloader.stakater.com/auto: "true"
         type: cronjob
@@ -28,7 +28,7 @@ spec:
           successfulJobsHistory: 1
           failedJobsHistory: 1
         containers:
-          postgres17-backup:
+          cluster-pg17-backup:
             image:
               repository: docker.io/prodrigestivill/postgres-backup-local
               tag: 17@sha256:483fa15ecd998302bd312fc380cb1b3683a940881d9099d6dfe65bcc1e2714e8
@@ -37,7 +37,7 @@ spec:
                   name: *app
             env:
               TZ: *tz
-              POSTGRES_HOST: postgres17-ro.database.svc.cluster.local
+              POSTGRES_HOST: cluster-pg17-ro.database.svc.cluster.local
               POSTGRES_DB: atuin,authentik,bazarr,gatus,grafana,jfstat,lidarr_log,lidarr_main,nextcloud,prowlarr_log,prowlarr_main,radarr_log,radarr_main,romm,sonarr_log,sonarr_main
               BACKUP_KEEP_DAYS: 14
               BACKUP_KEEP_WEEKS: 2
@@ -47,19 +47,19 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
-      pgvectors:
+      immich-pg17:
         annotations: *annotations
         type: cronjob
         cronjob: *cronjob
         containers:
-          pgvectors-backup:
+          immich-pg17-backup:
             image:
               repository: docker.io/prodrigestivill/postgres-backup-local
               tag: 17@sha256:483fa15ecd998302bd312fc380cb1b3683a940881d9099d6dfe65bcc1e2714e8
             envFrom: *envFrom
             env:
               TZ: *tz
-              POSTGRES_HOST: pgvectors-ro.database.svc.cluster.local
+              POSTGRES_HOST: immich-pg17-ro.database.svc.cluster.local
               POSTGRES_DB: immich
               BACKUP_KEEP_DAYS: 7
               BACKUP_KEEP_WEEKS: 4
