--- a/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -3,5 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cluster-pg17
-  - ./immich-pg17
+  - ./cluster-pg17.yaml
+  - ./gatus.yaml
+  - ./immich-pg17.yaml
+  - ./scheduledbackup.yaml
+  - ./service.yaml
