chore(suc): modify rbac in HelmRelease

--- a/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/app/helmrelease.yaml
@@ -67,5 +67,4 @@ spec:
           subjects:
             - identifier: system-upgrade-controller
     serviceAccount:
-      system-upgrade-controller:
-        enabled: true
+      system-upgrade-controller: {}
