--- a/kubernetes/apps/ai/open-webui/app/externalsecret.yaml
+++ b/kubernetes/apps/ai/open-webui/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         ## Open WebUI
-        DATABASE_URL: postgres://{{ .OPENWEBUI_POSTGRES_USER }}:{{ .OPENWEBUI_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local:5432/openwebui
+        DATABASE_URL: postgres://{{ .OPENWEBUI_POSTGRES_USER }}:{{ .OPENWEBUI_POSTGRES_PASSWORD }}@cluster-pg17-rw.database.svc.cluster.local:5432/openwebui
         # Randomly generated on first start but will fail when writing to the file
         # because of read-only root file system. Secret must therefor be set using
         # environment variable. Overrides the randomly generated string used for
